# Recursive-Matching

./: .gitignore  README.md  todo.txt
c/matching/: Makefile  lib.c  lib.h  main.c  matrix.c  matrix.h  recursive_match.c  recursive_match.h
docs/: conf.py  index.rst  python.rst
python/: demo.ipynb  hungarian.py  recursive.py  setup.py  utils.py
python/matching/: __init__.py
rust/matching/: Cargo.toml  rustfmt.toml
rust/matching/src/: lib.rs  main.rs  recursive_match.rs
